Initial commit: JournalApp project setup